[package]
name = "obrc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-scoped = { version = "0.9.0", features = ["tokio", "use-tokio"] }
fxhash = "0.2.1"
memmap2 = "0.9.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
